<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@drawable/union">

    <ImageView
            android:layout_width="177dp"
            android:layout_height="107dp" app:srcCompat="@drawable/logo" android:id="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:id="@+id/email_address_signin"
            android:background="@drawable/text_field" android:hint="@string/email"
            android:fontFamily="@font/maiden_orange"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp" android:layout_marginTop="330dp"
            app:layout_constraintTop_toTopOf="parent" android:paddingLeft="40dp" android:paddingBottom="5dp"
            android:paddingRight="5dp" android:paddingTop="5dp" android:inputType="textEmailAddress"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:id="@+id/password_signin"
            android:background="@drawable/text_field" android:hint="@string/password"
            android:fontFamily="@font/maiden_orange"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/email_address_signin"
            android:inputType="textPassword"
            android:paddingBottom="5dp" android:paddingLeft="40dp" android:paddingRight="5dp" android:paddingTop="5dp"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/email"
            android:id="@+id/imageView2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="28dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/email_address_signin"/>
    <TextView
            android:text="@string/signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:fontFamily="@font/maiden_orange"
            android:layout_marginTop="128dp" app:layout_constraintTop_toTopOf="parent" android:textSize="24sp"
            android:textColor="@color/colorPrimaryDark"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView"
            android:fontFamily="@font/maiden_orange" android:textSize="14sp"
            android:textColor="@color/colorPrimaryDark" android:text="@string/signincitation"/>
    <Button
            android:text="@string/signin"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:id="@+id/submit_signin"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:background="@drawable/btn_home_forms" android:textColor="@color/colorAccent"
            android:fontFamily="@font/maiden_orange"
            android:layout_marginBottom="50dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/lock"
            android:id="@+id/imageView4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="28dp" android:layout_marginTop="34dp"
            app:layout_constraintTop_toBottomOf="@+id/email_address_signin"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_forgot_password"
            android:clickable="true"
            android:textColor="#4D74B6"
            android:text="@string/forgot_password"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/submit_signin"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/password_signin"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintVertical_bias="0.097"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
</android.support.constraint.ConstraintLayout>